<!--
  ~  Copyright 2017 Rozdoum
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Social App</string>
    <string name="label_create_post_activity">Create post</string>
    <string name="label_post_detail_activity">Post detail</string>
    <string name="label_image_detail_activity">Image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_create_profile">Create profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="title_activity_edit_post">Edit post</string>
    <string name="title_activity_following_posts">Following posts</string>

    <string name="text_take_photo">Take photo</string>
    <string name="text_pick_photo">Pick from Gallery</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="button_ok">OK</string>

    <string name="hint_price">Food Price</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_portion">Portion (Box, Piece, Kg, etc.)</string>

    <string name="message_post_was_created">Post was created</string>
    <string name="error_fail_create_post">Fail to create post</string>
    <string name="error_fail_load_image">Fail to load image</string>
    <string name="error_fail_crop_image">Fail to crop image</string>
    <string name="error_smaller_image">Image is too small. Required image size 100x100 px</string>
    <string name="error_incorrect_file_type">Incorrect file type</string>
    <string name="error_bigger_file">File size is bigger than 10Mb</string>
    <string name="message_creating_post">Creating post …</string>
    <string name="message_saving">Saving …</string>
    <string name="warning_empty_image">Image is required</string>
    <string name="warning_empty_title">Title is required</string>
    <string name="warning_empty_price">Price is required</string>
    <string name="warning_empty_portion">Portion is required</string>
    <string name="warning_empty_description">Description is required</string>
    <string name="error_post_title_length">Max length of the title should be less than 255 symbols</string>
    <string name="error_fail_remove_post">Fail to remove post</string>
    <string name="message_post_was_removed">Post was removed</string>
    <string name="error_fail_update_post">Fail to update post</string>
    <string name="error_post_was_removed">Post was removed</string>
    <string name="confirm_deletion_post">Delete this post?</string>

    <string name="comment_text_hint">Enter your comment …</string>
    <string name="button_post_comment">Post comment</string>

    <string name="label_comments">Comments (%1$d):</string>

    <string name="create_post_menu_label">Post</string>
    <string name="create_post_full_menu_label">Create post</string>
    <string name="sign_out_menu_label">Sign out</string>
    <string name="edit_profile_menu_label">Edit profile</string>
    <string name="button_title_save">Done</string>
    <string name="button_title_continue">Continue</string>

    <!-- Strings related to registration and login -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirm password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone_number">Mobile phone number</string>
    <string name="prompt_self_description">Self description</string>
    <string name="prompt_address_country">Country</string>
    <string name="prompt_address_postal_code">Postal code</string>
    <string name="prompt_address_province">Province (Optional)</string>
    <string name="prompt_address_city">City</string>
    <string name="prompt_address_street">Street</string>
    <string name="prompt_address_building_number">Building number</string>
    <string name="action_create_profile">Continue</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_profile_name_length">Max length of the name should be less than 120 symbols</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_phone_number">This phone number is invalid</string>
    <string name="error_invalid_address">This address is invalid</string>
    <string name="error_confirm_password">Wrong password confirmation</string>
    <string name="action_sign_in">Sign in</string>
    <string name="permissions_not_granted">Cancelling, required permissions are not granted</string>
    <string name="error_fail_create_profile">Fail to create profile</string>
    <string name="error_fail_update_profile">Fail to update profile</string>
    <string name="text_login">Thank you for using our application! Please, sign in for continue your action.</string>
    <string name="error_authentication">Authentication failed.</string>
    <string name="error_google_play_services">Google Play Services error.</string>
    <string name="button_login_with_facebook">Login with facebook</string>
    <string name="button_login_with_google">Login with google</string>
    <string name="button_login_with_email">Login with email</string>
    <string name="text_register_with_email">Sign up for an account now.</string>
    <string name="text_register_with_email_info">Not a taster yet?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>


    <string name="loading">Loading …</string>
    <string name="removing">Removing …</string>
    <string name="error_general">Somthing went wrong.</string>
    <string name="error_general_post">Somthing went wrong with post, id: %1$s</string>
    <string name="internet_connection_failed">No internet connection</string>
    <string name="press_once_again_to_exit">Press once again to exit</string>

    <!-- Strings related to login -->

    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_re_password">Entered passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="profile_menu_item">Profile</string>
    <string name="collapse_text_label">show less</string>
    <string name="expand_text_label">show more</string>
    <string name="add_complain">Complain</string>
    <string name="edit_post_menu">Edit post</string>
    <string name="delete_post_menu">Delete post</string>
    <string name="complain_text">You can complain to this post if it contains violence,
        bullying and threats, hate speech, tragic events and sexually explicit contents.
        Nobody will see the post if you complain to it. You can\'t delete your complain.</string>

    <string name="send_comment_button_label">Send</string>
    <string name="posted_by_label">Posted by:</string>

    <plurals name="posts_counter_format">
        <item quantity="one">post</item>
        <item quantity="other">posts</item>
    </plurals>

    <plurals name="likes_counter_format">
        <item quantity="one">like</item>
        <item quantity="other">likes</item>
    </plurals>

    <plurals name="followers_counter_format">
        <item quantity="one">follower</item>
        <item quantity="other">followers</item>
    </plurals>

    <plurals name="followings_counter_format">
        <item quantity="one">following</item>
        <item quantity="other">followings</item>
    </plurals>

    <string name="posts_label">Posts:</string>
    <string name="complain_sent">Complain was sent successfully</string>
    <string name="now_time_range">now</string>

    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>

    <string name="post_image_transition_name" translatable="false">post_image_transition</string>
    <string name="post_author_image_transition_name" translatable="false">post_author_image_transition_name</string>
    <string name="message_new_post_was_created">New post was created</string>

    <plurals name="new_posts_counter_format">
        <item quantity="one">%1$d new post</item>
        <item quantity="other">%1$d new posts</item>
    </plurals>

    <string name="edit_comment_menu_item">Edit</string>
    <string name="delete_comment_menu_item">Delete</string>
    <string name="message_comment_was_removed">Comment was removed</string>
    <string name="message_comment_was_edited">Comment was edited</string>
    <string name="title_edit_comment">Edit comment</string>

    <string name="edit_profile_personal_information_label">Personal Information</string>
    <string name="edit_profile_contact_information_label">Contact Information</string>
    <string name="edit_profile_address_label">Address</string>
    <string name="edit_profile_more_information_label">More Information</string>


    <!--Follow-->
    <string name="button_follow_title">Follow</string>
    <string name="button_follow_back_title">Follow back</string>
    <string name="button_following">Following</string>
    <string name="unfollow_user_message">Unfollow %1$s?</string>
    <string name="button_title_unfollow">Unfollow</string>
    <string name="message_following_posts_empty">Follow somebody to see his new posts</string>
    <string name="following_post_menu_item">Following Posts</string>

    <!--Users list-->
    <string name="title_followers">Followers</string>
    <string name="title_followings">Followings</string>
    <string name="message_empty_list">You don\'t have any %1$s yet</string>

    <!--Search-->
    <string name="search_menu_item">Search</string>
    <string name="search_hint">Search …</string>
    <string name="posts_tab_title">Posts</string>
    <string name="users_tab_title">Users</string>
    <string name="empty_posts_search_message">No posts found</string>
    <string name="empty_user_search_message">No users found</string>


    <!--Firebase errors-->
    <string name="permission_denied_error">Please check your rules to access the Firebase Realtime Database</string>

    <!--Notifications-->
    <string name="new_like_channel_name">New Like</string>
    <string name="new_comment_channel_name">New Comment</string>


</resources>
