<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rozdoum.socialcomponents.main.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_bg_gradient"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/login_screen_content_offset_center_top"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_screen_title_margin"
            android:text="@string/app_name"
            style="@style/TextAppearance.MainTitle" />

        <RelativeLayout
            android:id="@+id/facebookSignInButton"
            android:layout_width="@dimen/base_login_button_width"
            android:layout_height="@dimen/base_login_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_screen_button_margin"
            android:background="@drawable/facebook_button_bg"
            android:elevation="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                app:srcCompat="@drawable/ic_bt_login_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/button_login_with_facebook"
                android:textColor="@drawable/login_button_text_selector" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/googleSignInButton"
            android:layout_width="@dimen/base_login_button_width"
            android:layout_height="@dimen/base_login_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_screen_button_margin"
            android:background="@drawable/google_button_bg"
            android:elevation="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                app:srcCompat="@drawable/ic_bt_login_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/button_login_with_google"
                android:textColor="@drawable/login_button_text_selector" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/emailSignInButton"
            android:layout_width="@dimen/base_login_button_width"
            android:layout_height="@dimen/base_login_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_screen_button_margin"
            android:background="@drawable/email_button_bg"
            android:elevation="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                app:srcCompat="@drawable/ic_bt_login_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/button_login_with_email"
                android:textColor="@drawable/login_button_text_selector" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="horizontal">

        <fragment android:name="com.rozdoum.socialcomponents.main.login.email_register.EmailRegisterFragment"
            android:id="@+id/fragment_register_place"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="horizontal">

        <fragment android:name="com.rozdoum.socialcomponents.main.login.email_login.EmailLoginFragment"
            android:id="@+id/fragment_login_place"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</FrameLayout>

